BPER/DEVF/force-app/main/default/objects/PDFConfigurator__mdt/PDFConfigurator__mdt.object-meta.xml
<CustomObject>
    <label>PDFConfigurator</label>
    <pluralLabel>PDFConfigurators</pluralLabel>
</CustomObject>