BPER/DEVF/force-app/main/default/objects/PDFConfigurator__mdt/fields/baseXml__c.field-meta.xml
<CustomField>
    <fullName>baseXml__c</fullName>
    <description>Stringa xml relativa alla sezione</description>
    <inlineHelpText>Stringa xml relativa alla sezione
PLACEHOLDERS
SEZIONI
###ZONA_SEZIONI###
COMPONENTI
###ZONA_COMPONENTI###
TABELLA
###XML_DETTAGLIO###
NUMERO RIGHE
###NUMERO_RIGHE###
NOME CAMPO
{!api_name_campo}</inlineHelpText>
    <label>baseXml</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>