BPER/DEVF/force-app/main/default/objects/PDFConfigurator__mdt/fields/ColumnJSON__c.field-meta.xml
<CustomField>
    <fullName>ColumnJSON__c</fullName>
    <label>Column JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>