BPER/DEVF/force-app/main/default/objects/PDFConfigurator__mdt/fields/COMPONENT__c.field-meta.xml
<CustomField>
    <fullName>COMPONENT__c</fullName>
    <description>Il nome del componente all&apos;interno della sezione</description>
    <inlineHelpText>Il nome del componente all&apos;interno della sezione</inlineHelpText>
    <label>Componente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>