BPER/DEVF/force-app/main/default/objects/PDFConfigurator__mdt/fields/FieldValueMapJSON__c.field-meta.xml
<CustomField>
    <fullName>FieldValueMapJSON__c</fullName>
    <label>FieldValueMapJSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>