BPER/DEVF/force-app/main/default/objects/PDFConfigurator__mdt/fields/HasMetodoSelezione__c.field-meta.xml
<CustomField>
    <fullName>HasMetodoSelezione__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo che indica se l&apos;xml recupererà dati tramite metodo dedicato</description>
    <inlineHelpText>Campo che indica se l&apos;xml recupererà dati tramite metodo dedicato</inlineHelpText>
    <label>Has Metodo Selezione</label>
    <type>Checkbox</type>
</CustomField>