BPER/DEVF/force-app/main/default/objects/PDFConfigurator__mdt/fields/HasQuery__c.field-meta.xml
<CustomField>
    <fullName>HasQuery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo che indica se l&apos;xml recupererà dati tramite query</description>
    <inlineHelpText>Campo che indica se l&apos;xml recupererà dati tramite query</inlineHelpText>
    <label>Has Query</label>
    <type>Checkbox</type>
</CustomField>