BPER/DEVF/force-app/main/default/objects/PDFConfigurator__mdt/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo che indica se l&apos;xml presente verrà utilizzato per popolare l&apos;xml totale</description>
    <inlineHelpText>Campo che indica se l&apos;xml presente verrà utilizzato per popolare l&apos;xml totale</inlineHelpText>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>