BPER/DEVF/force-app/main/default/objects/PDFConfigurator__mdt/fields/isRoot__c.field-meta.xml
<CustomField>
    <fullName>isRoot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo che indica la radice dell&apos;xml</description>
    <inlineHelpText>Campo che indica la radice dell&apos;xml</inlineHelpText>
    <label>isRoot</label>
    <type>Checkbox</type>
</CustomField>