BPER/DEVF/force-app/main/default/objects/PDFConfigurator__mdt/fields/MetodoSelezioneAdditionalParameters__c.field-meta.xml
<CustomField>
    <fullName>MetodoSelezioneAdditionalParameters__c</fullName>
    <description>Parametri aggiuntivi da passare al metodo di selezione, da scrivere in formato json.</description>
    <inlineHelpText>Parametri aggiuntivi da passare al metodo di selezione, da scrivere in formato json.</inlineHelpText>
    <label>Metodo Selezione additional parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>