BPER/DEVF/force-app/main/default/objects/PDFConfigurator__mdt/fields/MetodoSelezioneClasse__c.field-meta.xml
<CustomField>
    <fullName>MetodoSelezioneClasse__c</fullName>
    <description>API Name della classe da cui richiamare dinamicamente i metodi</description>
    <inlineHelpText>API Name della classe da cui richiamare dinamicamente i metodi</inlineHelpText>
    <label>Metodo Selezione Classe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>