BPER/DEVF/force-app/main/default/objects/PDFConfigurator__mdt/fields/MetodoSelezioneName__c.field-meta.xml
<CustomField>
    <fullName>MetodoSelezioneName__c</fullName>
    <description>API Name del metodo da richiamare dinamicamente</description>
    <inlineHelpText>API Name del metodo da richiamare dinamicamente</inlineHelpText>
    <label>Metodo Selezione Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>