BPER/DEVF/force-app/main/default/objects/PDFConfigurator__mdt/fields/OBJRECORDTYPE__c.field-meta.xml
<CustomField>
    <fullName>OBJRECORDTYPE__c</fullName>
    <description>Record Type Developer Name dell&apos;oggetto a cui fa riferimento l&apos;xml</description>
    <inlineHelpText>Record Type Developer Name dell&apos;oggetto a cui fa riferimento l&apos;xml</inlineHelpText>
    <label>RECORD TYPE OGGETTO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AltraUnitaOrganizzativa</fullName>
            </value>
            <value>
                <fullName>Area</fullName>
            </value>
            <value>
                <fullName>Banca</fullName>
            </value>
            <value>
                <fullName>Cointestazione</fullName>
            </value>
            <value>
                <fullName>DirezioneRegionale</fullName>
            </value>
            <value>
                <fullName>FilialeDiRelazione</fullName>
            </value>
            <value>
                <fullName>GruppoFinanziario</fullName>
            </value>
            <value>
                <fullName>IndustriesHousehold</fullName>
            </value>
            <value>
                <fullName>IndustriesBusiness</fullName>
            </value>
            <value>
                <fullName>PersonAccount</fullName>
            </value>
            <value>
                <fullName>IndustriesIndividual</fullName>
                <isActive>false</isActive>
                <label>IndustriesIndividual</label>
            </value>
            <value>
                <fullName>IndustriesInstitution</fullName>
                <isActive>false</isActive>
                <label>IndustriesInstitution</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>