BPER/DEVF/force-app/main/default/objects/PDFConfigurator__mdt/fields/ObjType__c.field-meta.xml
<CustomField>
    <fullName>ObjType__c</fullName>
    <label>ObjType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>