BPER/DEVF/force-app/main/default/objects/PDFConfigurator__mdt/fields/OGGETTO__c.field-meta.xml
<CustomField>
    <fullName>OGGETTO__c</fullName>
    <description>API NAME dell&apos;oggetto a cui fa riferimento l&apos;xml</description>
    <inlineHelpText>API NAME dell&apos;oggetto a cui fa riferimento l&apos;xml</inlineHelpText>
    <label>OGGETTO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>