BPER/DEVF/force-app/main/default/objects/PDFConfigurator__mdt/fields/Ordine__c.field-meta.xml
<CustomField>
    <fullName>Ordine__c</fullName>
    <description>Ordine di caricamento delle sezioni e dei componenti (sezione X00, componente XYY)</description>
    <inlineHelpText>Ordine di caricamento delle sezioni e dei componenti (sezione X00, componente XYY)</inlineHelpText>
    <label>Ordine</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>