BPER/DEVF/force-app/main/default/objects/PDFConfigurator__mdt/fields/QueryCampiAggiuntivi__c.field-meta.xml
<CustomField>
    <fullName>QueryCampiAggiuntivi__c</fullName>
    <description>campi relativi alle relazioni, separati da virgola</description>
    <inlineHelpText>Campi relativi alle relazioni, separati da virgola.
In caso di elemento ROOT: utilizzati per recuperare campi addentrati nelle relazioni
In caso di elemento non root: utilizzati solo se Has Query flaggato per recuperare campi addentrati nelle relazioni</inlineHelpText>
    <label>Query Campi Aggiuntivi</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>