BPER/DEVF/force-app/main/default/objects/PDFConfigurator__mdt/fields/QueryLookup__c.field-meta.xml
<CustomField>
    <fullName>QueryLookup__c</fullName>
    <description>Indicare l&apos;API Name dell&apos;campo lookup in cui è presente l&apos;id dell&apos;oggetto principale</description>
    <inlineHelpText>Indicare l&apos;API Name dell&apos;campo lookup in cui è presente l&apos;id dell&apos;oggetto principale</inlineHelpText>
    <label>Query Lookup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>