BPER/DEVF/force-app/main/default/objects/PDFConfigurator__mdt/fields/QueryObjectType__c.field-meta.xml
<CustomField>
    <fullName>QueryObjectType__c</fullName>
    <description>Indicare l&apos;API Name dell&apos;oggetto su cui effettuare la query</description>
    <inlineHelpText>Indicare l&apos;API Name dell&apos;oggetto su cui effettuare la query</inlineHelpText>
    <label>Query Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>