BPER/DEVF/force-app/main/default/objects/PDFConfigurator__mdt/fields/QueryWhereCondition__c.field-meta.xml
<CustomField>
    <fullName>QueryWhereCondition__c</fullName>
    <description>Indicare le condizioni della Query successive al WHERE, iniziando con AND (es: AND Id != NULL)</description>
    <inlineHelpText>Indicare le condizioni della Query successive al WHERE, iniziando con AND (es: AND Id != NULL)
DEFAULT: AND Id != NULL</inlineHelpText>
    <label>Query Where Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>