BPER/DEVF/force-app/main/default/objects/PDFConfigurator__mdt/fields/SECTION__c.field-meta.xml
<CustomField>
    <fullName>SECTION__c</fullName>
    <description>Il nome della sezione dell&apos;xml</description>
    <inlineHelpText>Il nome della sezione dell&apos;xml</inlineHelpText>
    <label>Nome Sezione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>