BPER/DEVF/force-app/main/default/objects/PDFConfigurator__mdt/fields/TemplateIterationXml__c.field-meta.xml
<CustomField>
    <fullName>TemplateIterationXml__c</fullName>
    <description>XML da inserire all&apos;interno del componente che verrà ripetuto per ogni record recuperato</description>
    <inlineHelpText>XML da inserire all&apos;interno del componente che verrà ripetuto per ogni record recuperato
PLACEHOLDERS
NUMERO RIGHE
###NUMERO_RIGHE###
NOME CAMPO
{!api_name_campo}</inlineHelpText>
    <label>Template Iteration Xml</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>